--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<html>
 <h1>Hello World</h1>
 <p>Je suis <strong>Leny Mory</strong></p>
 
 <h2>Introduction</h2>
 <p>J'aime :</p>
 <ul>
-<li>la fondue !</li>
+  <li>la fondue !</li>
   <li>le chocolat</li>
   <li>voilà</li>
 </ul>
+
+<p>toto titi tutu</p>
+</html>
